# Mosicpp

./: CMakeLists.txt  README.md
src/: main.cpp  mosaic.cpp  mosaic.h
